exports[`container component renders correctly 1`] = `
<div
  className="container">
  <section
    className="row">
    <section
      className="col-md-3 side-bar">
      <br />
      <Connect(SideBar) />
    </section>
    <section
      className="col-md-9">
      <Connect(IssueList) />
    </section>
  </section>
  <footer />
</div>
`;

exports[`issue card component renders correctly 1`] = `
<div>
  <div
    className="panel panel-default">
    <div
      className="panel-heading">
      <h4
        className="panel-title">
        <b>
          <a
            href="https://github.com/mozillacampusclubs/issue_parser_backend/issues/7"
            target="_">
            Dockerize Project
          </a>
        </b>
      </h4>
      <div
        className="lightslategray-text issue-card-date">
        <span>
          Created: 
          <b>
            Monday, June 5th, 2017
          </b>
        </span>
        <span
          className="pull-right">
          Last Updated: 
          <b>
            Tuesday, June 6th, 2017
          </b>
        </span>
      </div>
    </div>
    <div
      className="panel-body">
      <div
        className="gray-text">
        <span
          className="label label-default"
          style={
            Object {
              "backgroundColor": "#84b6eb",
            }
          }>
          enhancement
        </span>
      </div>
      <br />
      <div
        className="row">
        <div
          className="col-md-6">
          <div
            className="gray-text">
            <span>
              Experience Required: 
            </span>
            <span
              className="issue-card-attr">
              <b>
                easyfix
              </b>
            </span>
          </div>
          <br />
          <div
            className="gray-text">
            <span>
              Language: 
            </span>
            <span
              className="issue-card-attr">
              <b>
                python
              </b>
            </span>
          </div>
        </div>
        <div
          className="col-md-6">
          <div
            className="gray-text">
            <span>
              Technology Stack: 
            </span>
            <span
              className="issue-card-attr">
              <b>
                django
              </b>
            </span>
          </div>
          <br />
          <div
            className="gray-text">
            <span>
              Expected Time: 
            </span>
            <span
              className="issue-card-attr">
              <b>
                3 hours
              </b>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`issue list component renders correctly when data is fetched 1`] = `
<div>
  <div>
    <div>
      <h3>
        <b
          className="gray-text">
          Issues
        </b>
        <div
          className="pull-right">
          <span
            className="badge">
            Ordering: 
            random
             
          </span>
          <DropdownButton
            bsSize="small"
            bsStyle="info"
            id="sort"
            title="Sort">
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey="1"
              header={false}
              onClick={[Function]}>
              Exp-level (ascending)
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey="2"
              header={false}
              onClick={[Function]}>
              Exp-level (descending)
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={true}
              header={false} />
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey="3"
              header={false}
              onClick={[Function]}>
              Expected time (descending)
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey="4"
              header={false}
              onClick={[Function]}>
              Expected time (descending)
            </MenuItem>
          </DropdownButton>
        </div>
      </h3>
    </div>
    <div>
      
    </div>
  </div>
</div>
`;

exports[`issue list component renders correctly when data is fetching 1`] = `
<div>
  <div>
    <br />
    <br />
    <h4>
      Loading...
    </h4>
  </div>
</div>
`;

exports[`issue list component renders correctly when server error 1`] = `
<div>
  <div>
    <br />
    <div
      className="alert alert-warning ">
      Something went wrong
    </div>
  </div>
</div>
`;

exports[`side bar component renders correctly when data is fetched 1`] = `
<div>
  <div>
    <form
      className="form-group">
      <div
        className="form-group">
        <h5>
          Language
        </h5>
        <input
          className="form-control"
          list="languages"
          onChange={[Function]}
          value={undefined} />
        <datalist
          id="languages">
          <option
            value="python" />
          <option
            value="javascript" />
        </datalist>
      </div>
      <div
        className="form-group">
        <h5>
          Experience Level
        </h5>
        <input
          className="form-control"
          list="experienceNeeded"
          onChange={[Function]}
          value={undefined} />
        <datalist
          id="experienceNeeded">
          <option
            value="senior" />
          <option
            value="moderate" />
          <option
            value="easyfix" />
        </datalist>
      </div>
      <div
        className="form-group">
        <h5>
          Technology Stack
        </h5>
        <input
          className="form-control"
          list="techStack"
          onChange={[Function]}
          value={undefined} />
        <datalist
          id="techStack">
          <option
            value="react.js" />
          <option
            value="django, celery" />
          <option
            value="jest" />
          <option
            value="django" />
        </datalist>
      </div>
    </form>
    <button
      className="btn btn-primary"
      onClick={[Function]}>
      Submit
    </button>
  </div>
</div>
`;

exports[`side bar component renders correctly when data is fetching 1`] = `
<div>
  <h3>
    Loading... 
  </h3>
</div>
`;

exports[`side bar component renders correctly when server error 1`] = `
<div>
  <h4
    className="alert alert-warning">
    Error: Something went wrong
  </h4>
</div>
`;
